# observability-incident-triage

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/src/: __init__.py  main.py  metrics.py
apps/api/src/data/: store.py
apps/api/src/middleware/: request_context.py
apps/api/src/models/: domain.py
apps/api/src/routes/: accounts.py  admin.py  market.py  orders.py
apps/api/src/services/: __init__.py  downstream.py
apps/api/tests/: conftest.py  test_accounts.py  test_admin.py  test_downstream_errors.py  test_health.py  test_market.py  test_metrics.py  test_orders.py
apps/downstream/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/downstream/src/: __init__.py  logging_config.py  main.py  metrics.py  simulation.py
apps/downstream/src/data/: store.py
apps/downstream/src/middleware/: metrics.py  request_context.py
apps/downstream/src/routes/: health.py  pricing.py  risk.py  simulate.py
apps/downstream/tests/: conftest.py  test_health.py  test_pricing.py  test_risk.py  test_simulate.py
docs/: architecture.md  customer-scenario.md  deck-transcript.md  deck.pptx  demo-script.md  demo-transcript.md  discovery-questions.md  implementation-handoff.md  incident-scenarios.md  se-demo-deck.md  troubleshooting-playbook.md
observability/grafana/dashboards/: dependencies.json  errors.json  latency.json  overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: prometheus.yml
observability/prometheus/: prometheus.yml
scripts/: generate-traffic.sh  incident.sh
